kustomization2 for APAC

--- a/overlay/apac/kustomization.yaml
+++ b/overlay/apac/kustomization.yaml
@@ -5,4 +5,8 @@ bases:
 - ../../base
 #resources:
 
-nameSuffix: -apac 
+nameSuffix: -apac
+images:
+- name: mysql
+  newName: registry.redhat.io/rhel8/mysql-80
+  newTag: 1-152 
